[ATM] 풀이 리드미 수정

--- a/Swift/Greedy/readme/BOJ11399.md
+++ b/Swift/Greedy/readme/BOJ11399.md
@@ -18,14 +18,14 @@
     ex) 1분 + 3분 + 6분 + 9분 + 13분 = `32분`
 
     
-2. 먼저 사람의 수 n은 리턴 값이 string인 readLine()을 Int로 언랩핑하여 입력받는다.   
-   각 사람이 돈을 인출하는데 걸리는 시간 p는 readline()에 `split(separator:" ")`을 사용하여 
+2. 나의 풀이   
+   1. 먼저 사람의 수 n은 리턴 값이 string인 readLine()을 Int로 언랩핑하여 입력받는다.
+   2. 각 사람이 돈을 인출하는데 걸리는 시간 p는 readline()에 `split(separator:" ")`을 사용하여 
    공백을 기준으로 잘라서 입력받는다.  
-   현재 Stirng형으로 값을 입력받고 잘랐기 때문에 `Int형으로 변환`해주어야 한다.   
-   전환하면서 정렬까지 한번에 할 수 있도록 `map`을 이용하여 배열로 만들어 준 후 String을 `Int형`으로 변환해준다.   
-   만든 배열을 `sorted()`를 사용하여 정렬해준다.
-   각 사람이 돈을 인충하는데 필요한 시간 `sum`을 변수로 두고, 각 사람이 돈을 인출하는데 필요한 시간의 합을 `answer`이라는 변수로 지정한다.  
-   `for문`을 사용하여 `p`만큼 돌고 `최소값`을 구한다.
+   3. 현재 Stirng형으로 값을 입력받고 잘랐기 때문에 `Int형으로 변환`해주어야 한다.   
+   4. 정렬을 하기위해 `map`을 이용하여 배열로 만들고 String을 `Int형`으로 변환해준다.만든 배열을 `sorted()`를 사용하여 정렬해준다.
+   5. 각 사람이 돈을 인충하는데 필요한 시간을 `sum`이라는 변수로 두고, 각 사람이 돈을 인출하는데 필요한 시간의 합을 `answer`이라는 변수로 지정한다.  
+   6. `for문`을 사용하여 `p`만큼 돌아 더해주면서 `answer`을 구한다.
    
 ```Swift
 let n = Int(readLine()!)!
