--- a/Swift/Greedy/readme/BOJ1543.md
+++ b/Swift/Greedy/readme/BOJ1543.md
@@ -4,29 +4,41 @@
 > 2022-04-15
 
 ### Sol
-1. 수도 코드 작성해보기
-    - 사람의 수 `n`을 입력받는다.  
-      ex) 5
-    - 각 사람이 돈을 인출하는데 걸리는 시간 `p`를 입력받는다.  
-      ex) 2 1 3 4 3
-    - 입력받은 p를 `오름차순으로 정렬` 해준다.  
-      ex) 1 2 3 3 4
-    - `각 사람`이 `돈을 인출하는데 필요한 시간`을 구한다.  
-    ex) 1번째 사람은 1분, 2번째 사람은 1+2 3분, 3번째 사람은 3+3 6분, 4번째 사람은 6+3 9분, 5번째 사람은 9+4 13분  
-      즉, `1분 3분 6분 9분 13분`
-    - 각 사람이 돈을 인출하는데 필요한 시간의 `합`을 구한다.  
-    ex) 1분 + 3분 + 6분 + 9분 + 13분 = `32분`
-
+1. 수도 코드 
+    - 문서를 입력받는다.  
+      ex) ababababa
+    - 검색하고 싶은 단어 를 입력받는다.  
+      ex) aba 
+    - 시작 인덱스와 단어가 최대 몇 번 (중복되지 않게) 등장하는지 구하는 변수를 0으로 초기화 해준다.  
+      ex) var start = 0 / var cnt = 0
+    - 입력받은 문서의 시작 인덱스를 기준으로 검색하고 싶은 단어와 비교한다.    
+      ex) ababababa에서 맨 첫번째 a를 기준으로 검색하고 싶은 단어 aba와 비교
+    - 비교해서 맞다면, 단어를 세를 변수에 +1을 해주고 시작 인덱스 변수에 검색한 단어의 길이만큼 + 해준다.  
+      ex) `aba`bababa와 aba가 같으니 단어세는 변수 +1, 시작 인덱스 변수 +3 
+    - 비교해서 틀리다면, 시작 인덱스 변수에 +1 해준다.  
+      ex) aba`bab`aba와 aba가 다르니 시작 인덱스 변수에 +1을 하여 abab`aba`ba 탐색
     
 2. 나의 풀이   
-   1. 먼저 사람의 수 n은 리턴 값이 string인 readLine()을 Int로 언랩핑하여 입력받는다.
-   2. 각 사람이 돈을 인출하는데 걸리는 시간 p는 readline()에 `split(separator:" ")`을 사용하여 
-   공백을 기준으로 잘라서 입력받는다.  
-   3. 현재 Stirng형으로 값을 입력받고 잘랐기 때문에 `Int형으로 변환`해주어야 한다.   
-   4. 정렬을 하기위해 `map`을 이용하여 배열로 만들고 String을 `Int형`으로 변환해준다.만든 배열을 `sorted()`를 사용하여 정렬해준다.
-   5. 각 사람이 돈을 인충하는데 필요한 시간을 `sum`이라는 변수로 두고, 각 사람이 돈을 인출하는데 필요한 시간의 합을 `answer`이라는 변수로 지정한다.  
-   6. `for문`을 사용하여 `p`만큼 돌아 더해주면서 `answer`을 구한다.
-   
+   1. 문서 `doc`과 검색할 단어 `word`를 배열로 입력받는다.
+   2. 시작 인덱스 `start`와 단어가 최대 몇 번 (중복되지 않게) 등장하는지 구하는 변수 `cnt`를 0으로 초기화 해준다.
+   3. while문을 사용하여 doc과 word를 비교한다.(문자의 길이를 구할 때 `.count`를 사용한다.) 
+   4. 맞다면, `cnt += 1`, `start += word.count` 틀리다면, `start += 1`를 해준다.     
+   5. 반복문이 끝난다면 `cnt`를 프린트한다.
+      
 ```Swift
+var doc = readLine()!.map({$0})
+var word = readLine()!.map({$0})
+var start = 0
+var cnt = 0
 
+while start <= (doc.count)-(word.count) {
+  if Array(doc[start..<start+word.count]) == word {
+    cnt += 1
+    start += word.count
+  }
+  else {
+    start += 1
+  }
+}
+print(cnt)
 ```
